Update for next test release.

--- a/distro.cfg
+++ b/distro.cfg
@@ -4,7 +4,7 @@
 target = [% target %]
 deploy-runtime = [% runtime %]
 
-deploy-client = genome_annotation, kbapi_common, p3_seed, typecomp, Workspace, app_service
+deploy-client = genome_annotation, kbapi_common, typecomp, Workspace, app_service, p3_seed
 deploy-service = 
 deploy-master = auth
 
