Update again to pull app service from olsonanl for now.

--- a/distro.cfg
+++ b/distro.cfg
@@ -12,7 +12,8 @@ deploy-master = auth
 source-repo = olsonanl/dev_container
 
 [app_service]
-source-repo = TheSEED/app_service
+source-repo = olsonanl/app_service
+;source-repo = TheSEED/app_service
 
 [Workspace]
 source-repo = PATRIC3/Workspace
