add handle service

--- a/distro.cfg
+++ b/distro.cfg
@@ -4,7 +4,7 @@
 target = [% target %]
 deploy-runtime = [% runtime %]
 
-deploy-client = genome_annotation, kbapi_common, typecomp, Workspace, app_service, p3_seed
+deploy-client = genome_annotation, kbapi_common, typecomp, Workspace, app_service, p3_seed, handle_service
 deploy-service = 
 deploy-master = auth
 
@@ -84,3 +84,19 @@ service-url = [% kmer_annotation_url %]
 arast-url=http://tutorial.theseed.org/assembly
 arast-auth-service = RAST
 #source-repo = olsonanl/assembly
+
+[handle_service]
+self-url = [% handle_service_url %]
+default-shock-server = [% shock_url %]
+source-commit-hash = f690441b9a3b1afd894bacc9d858a17f285fc0e2
+
+# mysql database configs
+mysql-host  = seed-db-write.mcs.anl.gov
+mysql-user  = handle_service
+mysql-pass  = handle_service
+data-source = dbi:mysql:rast2_handle_service
+
+# logging configs
+mlog_log_level = 6
+mlog_api_url   =
+mlog_log_file  = service.log 
