Update to latest PATRIC.

--- a/distro.cfg
+++ b/distro.cfg
@@ -4,16 +4,21 @@
 target = [% target %]
 deploy-runtime = [% runtime %]
 
-deploy-client = genome_annotation, kbapi_common, typecomp, Workspace, app_service, p3_seed, handle_service
-deploy-service = 
+deploy-client = genome_annotation, kbapi_common, typecomp, Workspace, app_service, p3_seed, handle_service, awe_tools
+deploy-service =
 deploy-master = auth
 
 [dev_container]
 source-repo = olsonanl/dev_container
 
+[awe_tools]
+source-repo = olsonanl/awe_tools
+awe-url = [% awe_url %]
+shock-url = [% shock_url %]
+
 [app_service]
-source-repo = olsonanl/app_service
-;source-repo = TheSEED/app_service
+;source-repo = olsonanl/app_service
+source-repo = TheSEED/app_service
 
 [Workspace]
 source-repo = PATRIC3/Workspace
@@ -27,17 +32,8 @@ source-repo = PATRIC3/auth
 
 [genome_annotation]
 
-service-url = [% genome_annotation_url %]
-kmer_v2_data_directory = /vol/ross/MakeCS/Data/Data.may1
-kmer_classifier_data_directory = /data/kmer
-awe-server = [% awe_url %]
-shock-server = [% shock_url %]
-tempdir = /disks/tmp
-genemark-home = /disks/kb/gmsuite
-nr-annotation-directory = /disks/kb/data/NR
-
-[GenomeAnnotation]
-
+_service_name = GenomeAnnotation
+source-repo = kbase/genome_annotation
 service-url = [% genome_annotation_url %]
 kmer_v2_data_directory = /vol/ross/MakeCS/Data/Data.may1
 kmer_classifier_data_directory = /data/kmer
@@ -63,15 +59,9 @@ source-repo = olsonanl/p3_seed
 #service-url = http://localhost:7032
 # DBD = /mnt/bob/schema/deployment/lib/KSaplingDBD.xml
 
-
-[KmerAnnotationByFigfam]
-
-kmer-data = /disks/kb/data/FIGfams
-#kmer-ftp-site = ftp://ftp.theseed.org/misc/tmp
-service-url = [% kmer_annotation_url %]
-
 [kmer_annotation_figfam]
 
+_service_name = KmerAnnotationByFigfam
 kmer-data = /disks/kb/data/FIGfams
 #kmer-ftp-site = ftp://ftp.theseed.org/misc/tmp
 service-url = [% kmer_annotation_url %]
@@ -90,13 +80,3 @@ self-url = [% handle_service_url %]
 default-shock-server = [% shock_url %]
 source-commit-hash = f690441b9a3b1afd894bacc9d858a17f285fc0e2
 
-# mysql database configs
-mysql-host  = seed-db-write.mcs.anl.gov
-mysql-user  = handle_service
-mysql-pass  = handle_service
-data-source = dbi:mysql:rast2_handle_service
-
-# logging configs
-mlog_log_level = 6
-mlog_api_url   =
-mlog_log_file  = service.log 
