Updates to distro.

--- a/distro.cfg
+++ b/distro.cfg
@@ -69,6 +69,7 @@ service-url = [% kmer_annotation_url %]
 
 
 [typecomp]
+source-repo = olsonanl/typecomp
 
 [assembly]
 arast-url=http://tutorial.theseed.org/assembly
