--- a/distro.cfg
+++ b/distro.cfg
@@ -4,9 +4,9 @@
 target = [% target %]
 deploy-runtime = [% runtime %]
 
-deploy-client = genome_annotation, kbapi_common, typecomp, Workspace, app_service, p3_seed, handle_service, awe_tools
+deploy-client = genome_annotation, kbapi_common, typecomp, Workspace, app_service, p3_seed, handle_service, awe_tools, p3_auth
 deploy-service =
-deploy-master = auth
+;deploy-master = auth
 
 [dev_container]
 source-repo = olsonanl/dev_container
@@ -21,7 +21,8 @@ shock-url = [% shock_url %]
 source-repo = TheSEED/app_service
 
 [Workspace]
-source-repo = PATRIC3/Workspace
+source-repo = olsonanl/Workspace
+;source-repo = PATRIC3/Workspace
 
 [auth]
 
@@ -53,6 +54,9 @@ source-repo = olsonanl/kbapi_common
 # dbhost = db3.chicago.kbase.us
 # DBD = /mnt/bob/schema/deployment/lib/KSaplingDBD.xml
 #service-url = http://localhost:7032
+
+[p3_auth]
+source-repo = olsonanl/p3_auth
 
 [p3_seed]
 source-repo = olsonanl/p3_seed
