--- a/distro.cfg
+++ b/distro.cfg
@@ -17,8 +17,8 @@ awe-url = [% awe_url %]
 shock-url = [% shock_url %]
 
 [app_service]
-;source-repo = olsonanl/app_service
-source-repo = TheSEED/app_service
+source-repo = olsonanl/app_service
+;source-repo = TheSEED/app_service
 
 [Workspace]
 source-repo = olsonanl/Workspace
@@ -34,7 +34,7 @@ source-repo = PATRIC3/auth
 [genome_annotation]
 
 _service_name = GenomeAnnotation
-source-repo = kbase/genome_annotation
+source-repo = olsonanl/genome_annotation
 service-url = [% genome_annotation_url %]
 kmer_v2_data_directory = /vol/ross/MakeCS/Data/Data.may1
 kmer_classifier_data_directory = /data/kmer
