--- a/distro.cfg
+++ b/distro.cfg
@@ -4,7 +4,7 @@
 target = [% target %]
 deploy-runtime = [% runtime %]
 
-deploy-client = genome_annotation, kbapi_common, typecomp, Workspace, app_service, p3_seed, handle_service, awe_tools, p3_auth
+deploy-client = genome_annotation, kbapi_common, typecomp, Workspace, app_service, p3_seed, handle_service, awe_tools, p3_auth, assembly
 deploy-service =
 ;deploy-master = auth
 
@@ -78,7 +78,7 @@ source-repo = olsonanl/typecomp
 [assembly]
 arast-url=http://tutorial.theseed.org/assembly
 arast-auth-service = RAST
-#source-repo = olsonanl/assembly
+source-repo = olsonanl/assembly
 
 [handle_service]
 self-url = [% handle_service_url %]
