--- a/distro.cfg
+++ b/distro.cfg
@@ -81,6 +81,7 @@ arast-auth-service = RAST
 source-repo = olsonanl/assembly
 
 [handle_service]
+source-repo = olsonanl/handle_service
 self-url = [% handle_service_url %]
 default-shock-server = [% shock_url %]
 source-commit-hash = f690441b9a3b1afd894bacc9d858a17f285fc0e2
