Latest updates for 1.029

--- a/distro.cfg
+++ b/distro.cfg
@@ -84,5 +84,6 @@ source-repo = olsonanl/assembly
 source-repo = olsonanl/handle_service
 self-url = [% handle_service_url %]
 default-shock-server = [% shock_url %]
-source-commit-hash = f690441b9a3b1afd894bacc9d858a17f285fc0e2
+# the commit below is the latest on the p3_cli branch
+source-commit-hash = d7859190dd0e36b8e2bace624b6d3bb8ea5a1dab
 
