Updated for post-solr-schema changes

--- a/distro.cfg
+++ b/distro.cfg
@@ -4,12 +4,15 @@
 target = [% target %]
 deploy-runtime = [% runtime %]
 
-deploy-client = genome_annotation, kbapi_common, typecomp, Workspace, app_service, p3_seed, handle_service, awe_tools, p3_auth, assembly
+deploy-client = genome_annotation, p3_deployment, typecomp, Workspace, app_service, p3_seed, handle_service, awe_tools, p3_auth, assembly
 deploy-service =
 ;deploy-master = auth
 
 [dev_container]
 source-repo = olsonanl/dev_container
+
+[p3_deployment]
+source-repo = olsonanl/p3_deployment
 
 [awe_tools]
 source-repo = olsonanl/awe_tools
@@ -24,13 +27,6 @@ source-repo = olsonanl/app_service
 source-repo = olsonanl/Workspace
 ;source-repo = PATRIC3/Workspace
 
-[auth]
-
-globus-token-url = [% globus_token_url %]
-globus-profile-url = [% globus_profile_url %]
-trust-token-signers = [% trust_token_signers %]
-source-repo = PATRIC3/auth
-
 [genome_annotation]
 
 _service_name = GenomeAnnotation
@@ -44,24 +40,11 @@ tempdir = /disks/tmp
 genemark-home = /disks/kb/gmsuite
 nr-annotation-directory = /disks/kb/data/NR
 
-[kbapi_common]
-source-repo = olsonanl/kbapi_common
-
-[cdmi_api]
-
-# dbName = kbase_sapling_v3
-# userData = readonly/readonly
-# dbhost = db3.chicago.kbase.us
-# DBD = /mnt/bob/schema/deployment/lib/KSaplingDBD.xml
-#service-url = http://localhost:7032
-
 [p3_auth]
 source-repo = olsonanl/p3_auth
 
 [p3_seed]
 source-repo = olsonanl/p3_seed
-#service-url = http://localhost:7032
-# DBD = /mnt/bob/schema/deployment/lib/KSaplingDBD.xml
 
 [kmer_annotation_figfam]
 
@@ -69,8 +52,6 @@ _service_name = KmerAnnotationByFigfam
 kmer-data = /disks/kb/data/FIGfams
 #kmer-ftp-site = ftp://ftp.theseed.org/misc/tmp
 service-url = [% kmer_annotation_url %]
-
-
 
 [typecomp]
 source-repo = olsonanl/typecomp
