--- a/distro.cfg
+++ b/distro.cfg
@@ -4,7 +4,7 @@
 target = [% target %]
 deploy-runtime = [% runtime %]
 
-deploy-client = genome_annotation, p3_deployment, typecomp, Workspace, app_service, p3_seed, handle_service, awe_tools, p3_auth, assembly
+deploy-client = genome_annotation, p3_deployment, typecomp, Workspace, app_service, p3_code, p3_core, seed_core, seed_gjo, seed_svr, seed_rast, p3_auth
 deploy-service =
 ;deploy-master = auth
 
@@ -13,11 +13,6 @@ source-repo = olsonanl/dev_container
 
 [p3_deployment]
 source-repo = olsonanl/p3_deployment
-
-[awe_tools]
-source-repo = olsonanl/awe_tools
-awe-url = [% awe_url %]
-shock-url = [% shock_url %]
 
 [app_service]
 source-repo = olsonanl/app_service
@@ -43,28 +38,24 @@ nr-annotation-directory = /disks/kb/data/NR
 [p3_auth]
 source-repo = olsonanl/p3_auth
 
-[p3_seed]
-source-repo = olsonanl/p3_seed
+[p3_code]
+source-repo = olsonanl/p3_code
 
-[kmer_annotation_figfam]
+[p3_core]
+source-repo = PATRIC3/p3_core
 
-_service_name = KmerAnnotationByFigfam
-kmer-data = /disks/kb/data/FIGfams
-#kmer-ftp-site = ftp://ftp.theseed.org/misc/tmp
-service-url = [% kmer_annotation_url %]
+[seed_svr]
+source-repo = theseed/seed_svr
+
+[seed_core]
+source-repo = theseed/seed_core
+
+[seed_gjo]
+source-repo = theseed/seed_gjo
+
+[seed_rast]
+source-repo = theseed/seed_rast
 
 [typecomp]
 source-repo = olsonanl/typecomp
-
-[assembly]
-arast-url=http://tutorial.theseed.org/assembly
-arast-auth-service = RAST
-source-repo = olsonanl/assembly
-
-[handle_service]
-source-repo = olsonanl/handle_service
-self-url = [% handle_service_url %]
-default-shock-server = [% shock_url %]
-# the commit below is the latest on the p3_cli branch
-source-commit-hash = 76ec1dedf5c3ede31ea1435864c02eedaacd5f1c
 
