--- a/distro.cfg
+++ b/distro.cfg
@@ -4,7 +4,7 @@
 target = [% target %]
 deploy-runtime = [% runtime %]
 
-deploy-client = genome_annotation, p3_deployment, typecomp, Workspace, app_service, p3_code, p3_core, seed_core, seed_gjo, seed_svr, seed_rast, p3_auth
+deploy-client = genome_annotation, p3_deployment, typecomp, Workspace, app_service, p3_cli, p3_code, p3_core, seed_core, seed_gjo, seed_svr, seed_rast, p3_auth
 deploy-service =
 ;deploy-master = auth
 
@@ -40,6 +40,9 @@ source-repo = olsonanl/p3_auth
 
 [p3_code]
 source-repo = olsonanl/p3_code
+
+[p3_cli]
+source-repo = PATRIC3/p3_cli
 
 [p3_core]
 source-repo = PATRIC3/p3_core
