Pull the correct version of app_service.

--- a/distro.cfg
+++ b/distro.cfg
@@ -16,6 +16,7 @@ source-repo = olsonanl/p3_deployment
 
 [app_service]
 source-repo = olsonanl/app_service
+source-branch = dev-slurm
 ;source-repo = TheSEED/app_service
 
 [Workspace]
