Update for new release.

--- a/distro.cfg
+++ b/distro.cfg
@@ -4,7 +4,7 @@
 target = [% target %]
 deploy-runtime = [% runtime %]
 
-deploy-client = genome_annotation, p3_deployment, typecomp, Workspace, app_service, p3_cli, p3_code, p3_core, seed_core, seed_gjo, seed_svr, seed_rast, p3_auth
+deploy-client = genome_annotation, p3_deployment, typecomp, Workspace, app_service, p3_cli, p3_code, p3_core, seed_core, seed_gjo, seed_svr, seed_rast, p3_auth, sars2_assembly
 deploy-service =
 ;deploy-master = auth
 
@@ -13,6 +13,9 @@ source-repo = olsonanl/dev_container
 
 [p3_deployment]
 source-repo = olsonanl/p3_deployment
+
+[sars2_assembly]
+source-repo = PATRIC3/sars2_assembly
 
 [app_service]
 source-repo = olsonanl/app_service
