--- a/distro.cfg
+++ b/distro.cfg
@@ -26,6 +26,9 @@ source-branch = dev-slurm
 source-repo = olsonanl/Workspace
 ;source-repo = PATRIC3/Workspace
 
+service-url = [% workspace_service_url %]
+download-url = [% workspace_download_url %]
+
 [genome_annotation]
 
 _service_name = GenomeAnnotation
