--- a/localize.cfg
+++ b/localize.cfg
@@ -1,9 +1,11 @@
 globus_token_url	https://p3.theseed.org/goauth/token?grant_type=client_credentials
 globus_profile_url	https://p3.theseed.org/users
 trust_token_signers	https://nexus.api.globusonline.org/goauth/keys https://user.alpha.patricbrc.org/public_key https://user.beta.patricbrc.org/public_key https://user.patricbrc.org/public_key http://rast.nmpdr.org/goauth/keys/E087E220-F8B1-11E3-9175-BD9D42A49C03
-genome_annotation_url	http://tutorial.theseed.org/services/genome_annotation
-kmer_annotation_url	http://tutorial.theseed.org/services/kmer_annotation_figfam
-handle_service_url	http://tutorial.theseed.org/services/handle_service
-invocation_url		http://tutorial.theseed.org/services/invocation
+genome_annotation_url	https://tutorial.theseed.org/services/genome_annotation
+kmer_annotation_url	https://tutorial.theseed.org/services/kmer_annotation_figfam
+handle_service_url	https://tutorial.theseed.org/services/handle_service
+invocation_url		https://tutorial.theseed.org/services/invocation
 awe_url			https://p3.theseed.org/services/awe_api
 shock_url		https://p3.theseed.org/services/shock_api
+workspace_service_url	https://p3.theseed.org/services/Workspace
+workspace_download_url	https://p3.theseed.org/services/WorkspaceDownload
