--- a/distro.cfg
+++ b/distro.cfg
@@ -18,8 +18,8 @@ source-repo = olsonanl/p3_deployment
 source-repo = PATRIC3/sars2_assembly
 
 [app_service]
-source-repo = olsonanl/app_service
-source-branch = dev-slurm
+source-repo = BV-BRC/app_service
+;source-branch = dev-slurm
 ;source-repo = TheSEED/app_service
 
 [Workspace]
@@ -32,7 +32,7 @@ download-url = [% workspace_download_url %]
 [genome_annotation]
 
 _service_name = GenomeAnnotation
-source-repo = olsonanl/genome_annotation
+source-repo = TheSEED/genome_annotation
 service-url = [% genome_annotation_url %]
 kmer_v2_data_directory = /vol/ross/MakeCS/Data/Data.may1
 kmer_classifier_data_directory = /data/kmer
